v1.3.12 Changed HP headline. Amended ::after in testimonial box to remove overflow bug

--- a/css/modules/testimonials.scss
+++ b/css/modules/testimonials.scss
@@ -67,7 +67,7 @@
         opacity: 0.05;
         padding: 5px;
         position: absolute;
-        right: -31px;
+        right: 0px;
         top: 163px;
         width: 150px;
         z-index: 1;
